# KoteKomi

./: .gitignore  AGENTS.md  pyproject.toml
docs/: 2026-07-08-KoteKomi.md  2026-07-09-assertion-epistemic-scope-source-authority.md  2026-07-09-orthogonal-briefing-outline.md  2026-07-09-pipeline-executable-agent-next-step-plans.md  2026-07-09-pipeline-readiness-gates-agent-next-step.md  2026-07-09-pipeline-run-next-execution.md  2026-07-09-review-queue-and-review-packet.md  2026-07-09-review-readiness-agent-state.md  2026-07-10-explicit-review-next-decision-execution.md  2026-07-10-local-extraction-model-runtime.md  2026-07-10-managed-llama-server.md  2026-07-10-portable-local-model-runtime.md  2026-07-10-review-drain-queue.md  2026-07-10-review-next-execution.md  2026-07-11-R0-A-Ledger-repair-and-immutable-commit-semantics.md  2026-07-11-R0-B-Stable-source-identity-and-document-revisioning.md  2026-07-11-R0-C-deterministic-representation-identity-and-atomic-bundle-commit.md  2026-07-11-R0-D-atomic-evidence-gated-assertion-acceptance.md  2026-07-11-R0-authoritative-commit-boundary.md  2026-07-11-R0-verification.md  2026-07-11-analysis-coverage-and-recovery.md  2026-07-11-authoritative-document-ingestion-program.md  2026-07-11-derived-document-retrieval.md  2026-07-11-deterministic-context-planning.md  2026-07-11-evidence-weighted-graph-projections.md  2026-07-11-ingestion-evaluation-and-release-gates.md  2026-07-11-pdf-document-ingestion.md  2026-07-11-replayable-evidence-targets.md  2026-07-11-source-capture-and-document-versioning.md  2026-07-11-source-lineage-and-independence.md  2026-07-11-staged-model-extraction.md  2026-07-11-structured-news-ingestion.md  2026-07-11-versioned-document-representations.md  2026-07-12-R1-A-first-analyzeable-pdf-representation.md  2026-07-13-TDD-4-fixture-set.md  2026-07-14-agent-task-manifest-v1.md  2026-07-14-tdd-5-implementation-plan.md  2026-07-14-terra-high-harness-series-plan.md  CHECK_PLAN.md
prompts/: propose_assertions.md
schemas/: actor.schema.json  analysis_item_attempt.schema.json  analysis_item_manifest_selection.schema.json  analysis_item_task_selection.schema.json  analysis_plan_artifact.schema.json  analysis_run.schema.json  analysis_run_artifact.schema.json  analysis_unit_artifact.schema.json  argument_edge.schema.json  assertion.schema.json  assertion_evidence_link.schema.json  briefing.schema.json  build_identity_snapshot.schema.json  context_manifest_artifact.schema.json  document.schema.json  document_edge.schema.json  document_node.schema.json  document_reference.schema.json  document_representation.schema.json  document_revision_relation.schema.json  document_source_selector.schema.json  document_table.schema.json  document_table_annotation.schema.json  document_table_cell.schema.json  document_table_fragment.schema.json  document_table_row.schema.json  (+32 more)
(+16 files in other folders)
