[project]
name = "kotekomi"
version = "0.1.0"
description = "Local-first intelligence ledger and Briefing generator."
requires-python = ">=3.12,<3.13"
dependencies = [
  "kotekomi-domain",
]

[dependency-groups]
dev = [
  "jsonschema>=4.24,<5",
  "pyright>=1.1.400,<2",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.uv.sources]
kotekomi-domain = { workspace = true }

[tool.uv.workspace]
members = ["packages/domain"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["packages/domain/tests"]
pythonpath = ["packages/domain/src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["packages/domain/src", "packages/domain/tests", "scripts"]
executionEnvironments = [
  { root = ".", extraPaths = ["packages/domain/src"] },
]
