[project]
name = "kotekomi"
version = "0.1.0"
description = "Local-first intelligence ledger and Briefing generator."
requires-python = ">=3.12,<3.13"
dependencies = [
  "kotekomi-pipelines",
]

[dependency-groups]
dev = [
  "jsonschema>=4.24,<5",
  "pyright>=1.1.400,<2",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.uv.sources]
kotekomi-application = { workspace = true }
kotekomi-adapters = { workspace = true }
kotekomi-briefing = { workspace = true }
kotekomi-domain = { workspace = true }
kotekomi-pipelines = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/adapters",
  "packages/application",
  "packages/briefing",
  "packages/domain",
  "packages/pipelines",
]

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
testpaths = [
  "packages/adapters/tests",
  "packages/application/tests",
  "packages/briefing/tests",
  "packages/domain/tests",
  "packages/pipelines/tests",
]
pythonpath = [
  "packages/adapters/src",
  "packages/application/src",
  "packages/briefing/src",
  "packages/domain/src",
  "packages/pipelines/src",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
include = [
  "packages/adapters/src",
  "packages/adapters/tests",
  "packages/application/src",
  "packages/application/tests",
  "packages/briefing/src",
  "packages/briefing/tests",
  "packages/domain/src",
  "packages/domain/tests",
  "packages/pipelines/src",
  "packages/pipelines/tests",
  "scripts",
]
executionEnvironments = [
  { root = ".", extraPaths = [
    "packages/adapters/src",
    "packages/application/src",
    "packages/briefing/src",
    "packages/domain/src",
    "packages/pipelines/src",
  ] },
]
